--- a/jobportal/files/application.properties
+++ b/jobportal/files/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=jobportal
 server.port=2025
 
+spring.security.user.name=user
+spring.security.user.password=user@1234
+
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jobportal
 spring.datasource.username=jobportal
 spring.datasource.password=jobportal
